app/assets/stylesheets/courses.css.less
// Place all the styles related to the courses controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#explorer_main{
  box-shadow: 0 3px 3px #888;
  margin-bottom: 20px;
}

td {

  padding: 10px;
}

th {
  padding: 10px;
}

.crs_search{
  margin-left: 25px;
  padding: 5px;
  height: 25px;
}

.smstr{
  margin-left: 6px;
}

.prfssr{
  margin-left: 5px;
}

